@@ -1,2 +1,4 @@
 # BetsAPI-parser
 App made to parse soccer games from betsapi.com and translate events to telegram via telegrambot 
+vm var 
+--module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml
